# kernel

./: .bazelrc  .gitignore  BACKLOG.md  BUILD.bazel  BUILD.freestnd-c-hdrs  BUILD.limine-protocol  BUILD.qemu  MODULE.bazel  Makefile  README.md  boot.c  boot.h  cc_toolchain_config.bzl  cga_graphics.h  discover_bazel_c_compile_commands.py  discover_bazel_rust_project.sh  initrd.txt  interrupt_handlers.asm  interrupts.c  interrupts.h  kernel.aarch64.ld  kernel.c  kernel.ld  kernel.x86_64.ld  limine.conf  multiboot.h  run_qemu.sh  serial.c  serial.h  stack_smashing_protector.c  std_memory.c
bootloader/: menu.lst
hello_world/: BUILD.bazel  main.c  string.c  string.h
include/: syscall_err_list.h  syscall_errs.h  syscall_list.h  syscall_nums.h  syscall_user.h
init/: BUILD.bazel  Makefile
init/include/: elf.h
init/src/: elf.c  entry.c  main.c  string.c  syscalls.h
init/src/drivers/keyboard/aarch64/: keyboard.c
init/src/drivers/keyboard/x86_64/: keyboard.c
init/src/drivers/serial/aarch64/: serial.c
kernel/: Cargo.toml  Makefile  build.rs
kernel-32-bit/: kernel.c
kernel/.cargo/: config.toml
kernel/api/init/: Cargo.toml  build.rs
kernel/api/syscalls/: BUILD.bazel  Cargo.toml  build.rs  syscall_list.h  syscalls_wrapper.h
kernel/core/: BUILD.bazel  Cargo.toml  Makefile  platform_wrapper.h
kernel/core/src/: init_process.rs  lib.rs  task_registry.rs
kernel/core/src/platform/: early_console.rs  emergency_console.rs  interrupts.rs  mod.rs  modules.rs  physical_memory_manager.rs  platform.rs  syscalls.rs  tasks.rs  terminal.rs  timer.rs  virtual_memory_manager.rs  virtual_memory_manager_context.rs
kernel/core/src/syscall_handler/: mod.rs  sys_clone.rs  sys_proc_create.rs  sys_proc_mmap.rs  sys_proc_mprot.rs  sys_proc_munmap.rs  sys_proc_spawn.rs
kernel/platform/: BUILD.bazel  Cargo.toml  build.rs  module.mk  platform_wrapper.h
kernel/platform/include/: modules.h  physical_memory_manager.h  platform.h  tasks.h  terminal.h  virtual_address_allocator.h
kernel/platform/src/arch/aarch64/: interrupts.c  platform.c  tasks.c  vectors.S
kernel/platform/src/arch/x86_64/: cpu_interrupts.h  interrupt_entry.S  interrupts.c  platform.c  syscall_entry.S  tasks.c
kernel/src/: allocator.rs  entrypoint.rs  init_process.rs  interrupt_safe_spin_lock.rs  lib.rs  logging.rs  main.rs  scheduler.rs  spin_lock.rs  syscall_handler.rs  task_id.rs  task_registry.rs  ticker.rs
kernel/src/platform/: early_console.rs  elf.rs  interrupts.rs  memory_layout.rs  mod.rs  modules.rs  physical_memory_manager.rs  physical_page_frame.rs  platform.rs  scheduler.rs  syscalls.rs  tasks.rs  terminal.rs  thread.rs  ticker.rs  timer.rs  virtual_address.rs  virtual_address_allocator.rs  virtual_memory_manager.rs  virtual_memory_manager_context.rs  virtual_page_address.rs
kernel/src/platform/drivers/: keyboard.rs  serial.rs
kernel/src/syscall_handler/: mod.rs  sys_clone.rs  sys_exit.rs  sys_mmap.rs  sys_write.rs  user_ptr.rs  user_slice.rs
libs/libsyscall/: BUILD.bazel  syscalls.c  syscalls.h
platform/: Makefile
platform/include/: boot.h  early_console.h  elf.h  interrupts.h  io_wrapper.h  keyboard.h  physical_memory_manager.h  pic.h  platform.h  psf.h  scheduler.h  serial.h  syscalls.h  tasks.h  terminal.h  thread.h  ticker.h  timer.h  virtual_address_allocator.h  virtual_memory_manager.h
platform/include/drivers/: keyboard.h  serial.h
platform/src/: boot.c  boot.h  interrupts.c  io_wrapper.c  keyboard.c  keyboard.h  main.c  main.h  modules.c  modules.h  physical_memory_manager.c  physical_memory_manager.h  pic.c  pit.c  pit.h  psf.c  psf.h  scheduler.c  scheduler_switching.aarch64.S  scheduler_switching.x86_64.asm  serial.c  string.c  terminal.c  ticker.c  virtual_memory_manager.c  virtual_memory_manager.h
platform/src/arch/aarch64/: cpu_interrupts.h  early_console.c  elf.c  entry.S  gic.c  gic.h  interrupts.c  platform.c  syscalls.c  syscalls_priv.h  tasks.c  thread.c  thread_asm.S  thread_priv.h  timer.c  vectors.S  virtual_memory_manager.c  virtual_memory_manager_priv.h
platform/src/arch/x86_64/: acpi.c  acpi.h  acpi_priv.h  cpu_interrupts.h  early_console.c  elf.c  gdt.c  gdt.h  interrupt_entry.asm  interrupts.c  ioapic.c  ioapic.h  lapic.c  lapic.h  platform.c  syscall_entry.asm  syscalls.c  tasks.c  thread.c  thread_asm.asm  thread_priv.h  timer.c  virtual_memory_manager.c  virtual_memory_manager_priv.h
platform/src/common/elf/: elf.c
platform/src/common/syscalls/: sys_exit.c  sys_exit.h  sys_write.c  sys_write.h  syscalls_dispatch.c  syscalls_dispatch.h
platform/src/common/virtual_address_allocator/: virtual_address_allocator.c
platform/src/drivers/keyboard/common/: keyboard.c  keyboard_priv.h
platform/src/drivers/keyboard/x86_64/: keyboard.c  keyboard_priv.x86_64.h  scancodes.c
platform/src/drivers/serial/aarch64/: dirty_vmm_priv.c  dirty_vmm_priv.h  serial.c
platform/src/drivers/serial/x86_64/: serial.c
platform/src/interrupts/: interrupt_wrapping.aarch64.S  interrupt_wrapping.asm  interrupts.c  interrupts.h
src/: boot.c  boot.h  cga_graphics.c  interrupt_wrapping.asm  interrupts.c  main.c  main.h  serial.c
toolchain/: BUILD.bazel  cc_toolchain_config.bzl
