load(":transitions.bzl", "platform_binary_wrapper")

package(default_visibility = ["//visibility:public"])

exports_files([
    "BUILD.freestnd-c-hdrs",
    "BUILD.limine-protocol",
])

platform_binary_wrapper(
    name = "init_elf",
    platform = select({
        "@platforms//cpu:x86_64": "//platforms:user_x86_64",
        "@platforms//cpu:aarch64": "//platforms:user_aarch64",
    }),
    target = "//init",
)

genrule(
    name = "kernel_iso",
    srcs = [
        "//kernel",
        ":init_elf",
        "@limine-bootloader//:boot_artifacts",
        "limine.conf",
        "Mik_8x16.psf",
    ],
    outs = ["kernel.iso"],
    cmd = """
    mkdir -p staging/boot/limine/
    cp $(location //kernel:kernel) staging/boot/kernel.elf
    cp $(location :init_elf) staging/boot/init.elf
    cp $(location :Mik_8x16.psf) staging/boot/kernel-font.psf

    # Grab all boot artifacts from the filegroup
    cp $(locations @limine-bootloader//:boot_artifacts) staging/boot/limine/
    cp $(location limine.conf) staging/boot/limine/

    xorriso -as mkisofs -R -r -J -b boot/limine/limine-bios-cd.bin \
		-no-emul-boot -boot-load-size 4 -boot-info-table -hfsplus \
		-apm-block-size 2048 --efi-boot boot/limine/limine-uefi-cd.bin \
		-efi-boot-part --efi-boot-image --protective-msdos-label \
		staging/ -o $@

    $(location @limine-bootloader//:limine_tool) bios-install $@
    """,
    target_compatible_with = [
        "@platforms//cpu:x86_64",
    ],
    tools = ["@limine-bootloader//:limine_tool"],
)

genrule(
    name = "kernel_img",
    srcs = [
        "//kernel",
        ":init_elf",
        "@limine-bootloader//:boot_artifacts",
        "limine.conf",
        "Mik_8x16.psf",
    ],
    outs = ["kernel.img"],
    cmd = """
    dd if=/dev/zero of=$@ bs=1M count=64
    mformat -i $@ ::
    mmd -i $@ ::/EFI ::/EFI/BOOT ::/boot ::/boot/limine
    mcopy -i $@ $(locations @limine-bootloader//:boot_artifacts) ::/EFI/BOOT/
    mcopy -i $@ $(location limine.conf) ::/boot/limine/
    mcopy -i $@ $(location //kernel:kernel) ::/boot/kernel.elf
    mcopy -i $@ $(location :init_elf) ::/boot/init.elf
    mcopy -i $@ $(location Mik_8x16.psf) ::/boot/kernel-font.psf
    """,
    target_compatible_with = [
        "@platforms//cpu:aarch64",
    ],
)
