load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_filegroup", "pkg_files", "pkg_mklink")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load(":transitions.bzl", "platform_binary_wrapper")

package(default_visibility = ["//visibility:public"])

exports_files([
    "BUILD.freestnd-c-hdrs",
    "BUILD.limine-protocol",
])

platform_binary_wrapper(
    name = "init",
    platform = select({
        "@platforms//cpu:x86_64": "//platforms:user_x86_64",
        "@platforms//cpu:aarch64": "//platforms:user_aarch64",
    }),
    target = "//init",
)

platform_binary_wrapper(
    name = "hello_world",
    platform = select({
        "@platforms//cpu:x86_64": "//platforms:user_x86_64",
        "@platforms//cpu:aarch64": "//platforms:user_aarch64",
    }),
    target = "//hello_world:hello_world",
)

pkg_files(
    name = "limine_bootloader",
    srcs = [
        "limine.conf",
        "@limine-bootloader//:boot_artifacts",
    ],
    prefix = "/boot/limine",
)

pkg_files(
    name = "efi_artifacts",
    srcs = [
        "@limine-bootloader//:boot_artifacts",
    ],
    prefix = "/EFI/BOOT",
)

pkg_files(
    name = "kernel_files",
    srcs = [
        "//kernel",
        ":init",
        ":initrd_tar",
        "Mik_8x16.psf",
    ],
    prefix = "/boot",
)

pkg_tar(
    name = "kernel_tar",
    srcs = [
        ":kernel_files",
        ":limine_bootloader",
        ":efi_artifacts",
    ],
    mode = "0644",
    out = "kernel.tar",
)

pkg_tar(
    name = "initrd_tar",
    srcs = [
        "initrd_message.txt",
        ":hello_world",
    ],
    mode = "0644",
    out = "initrd.tar",
)

genrule(
    name = "kernel_iso",
    srcs = [
        ":kernel_tar",
    ],
    outs = ["kernel.iso"],
    cmd = """
    mkdir -p staging/
    tar -xf $(location :kernel_tar) -C staging/

    xorriso -as mkisofs -R -r -J -b boot/limine/limine-bios-cd.bin \
		-no-emul-boot -boot-load-size 4 -boot-info-table -hfsplus \
		-apm-block-size 2048 --efi-boot boot/limine/limine-uefi-cd.bin \
		-efi-boot-part --efi-boot-image --protective-msdos-label \
		staging/ -o $@

    $(location @limine-bootloader//:limine_tool) bios-install $@
    """,
    target_compatible_with = [
        "@platforms//cpu:x86_64",
    ],
    tools = ["@limine-bootloader//:limine_tool"],
)

genrule(
    name = "kernel_img",
    srcs = [
        ":kernel_tar",
    ],
    outs = ["kernel.img"],
    cmd = """
    dd if=/dev/zero of=$@ bs=1M count=64
    mformat -i $@ ::
    mkdir -p staging/
    tar -xf $(location :kernel_tar) -C staging/
    mcopy -i $@ -s staging/* ::
    """,
    target_compatible_with = [
        "@platforms//cpu:aarch64",
    ],
)

sh_binary(
    name = "qemu",
    srcs = ["run_qemu.sh"],
    data = select({
        "@platforms//cpu:x86_64": [":kernel_iso"],
        "@platforms//cpu:aarch64": [":kernel_img", "@qemu//:edk2-aarch64-code"],
    }),
    args = select({
        "@platforms//cpu:x86_64": ["$(location :kernel_iso)", "x86_64", "-"],
        "@platforms//cpu:aarch64": ["$(location :kernel_img)", "aarch64", "$(location @qemu//:edk2-aarch64-code)"],
    }) + ["NODEBUG"],
)

sh_binary(
    name = "qemu-debug",
    srcs = ["run_qemu.sh"],
    data = select({
        "@platforms//cpu:x86_64": [":kernel_iso"],
        "@platforms//cpu:aarch64": [":kernel_img", "@qemu//:edk2-aarch64-code"],
    }),
    args = select({
        "@platforms//cpu:x86_64": ["$(location :kernel_iso)", "x86_64", "-"],
        "@platforms//cpu:aarch64": ["$(location :kernel_img)", "aarch64", "$(location @qemu//:edk2-aarch64-code)"],
    }) + ["DEBUG"],
)
