module(
    name = "kernel",
    version = "0.1.0",
)

# Pull in the LLVM toolchain support
bazel_dep(name = "toolchains_llvm", version = "1.3.0")

# Pull in the CC rules
bazel_dep(name = "rules_cc", version = "0.2.14")

# Pull in the Rust rules
#bazel_dep(name = "rules_rust", version = "0.54.1")

# Pull in standard platform definitions (x86_64, aarch64, etc.)
bazel_dep(name = "platforms", version = "1.0.0")

# Configure the LLVM toolchain
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")

llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "17.0.6", # Specific version for consistency
)

# Register the toolchain so Bazel actually uses it
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")
register_toolchains("//:all")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "freestnd-c-hdrs",
    remote = "https://github.com/osdev0/freestnd-c-hdrs-0bsd.git",
    commit = "5e4e9e70278fe89ea328d359a58aff4f4a94b165",
    build_file = "BUILD.freestnd-c-hdrs",
)

git_repository(
    name = "limine-protocol",
    remote = "https://github.com/limine-bootloader/limine-protocol.git",
    commit = "42e836e30242c2c14f889fd76c6f9a57b0c18ec2",
    build_file = "BUILD.limine-protocol",
)
