load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "hello_world",
    srcs = [
        "main.c",
        "string.c",
        "string.h",
    ],
    linkopts = [
        "-Ttext 0x400000",
    ],
    linkstatic = True,
    target_compatible_with = ["@//platforms:user_mode"] + select({
        "@platforms//cpu:aarch64": [
            "@platforms//cpu:aarch64",
            "@platforms//os:uefi",
        ],
        "@platforms//cpu:x86_64": [
            "@platforms//cpu:x86_64",
            "@platforms//os:none",
        ],
    }),
    deps = [
        "//libs/libsyscall",
        "@freestnd-c-hdrs//:freestnd-c-hdrs",
    ],
)
