load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "init",
    srcs = glob(["src/*.c", "include/**/*.h", "src/*.h"]) + select({
        "@platforms//cpu:x86_64": glob(["src/drivers/*/x86_64/*.c", "src/drivers/*/x86_64/*.h"]),
        "@platforms//cpu:aarch64": glob(["src/drivers/*/aarch64/*.c", "src/drivers/*/aarch64/*.h"], allow_empty = True),
    }),
    includes = ["include", "src"],
    linkopts = [
        "-Ttext 0x400000",
    ],
    linkstatic = True,
    target_compatible_with = ["@//platforms:user_mode"] + select({
        "@platforms//cpu:aarch64": [
            "@platforms//cpu:aarch64",
            "@platforms//os:uefi",
        ],
        "@platforms//cpu:x86_64": [
            "@platforms//cpu:x86_64",
            "@platforms//os:none",
        ],
    }),
    deps = [
        "//libs/libsyscall",
        "@freestnd-c-hdrs//:freestnd-c-hdrs",
    ],
)
