load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("@rules_cc//cc:defs.bzl", "cc_import", "cc_toolchain", "cc_toolchain_suite")
load("@rules_rust//rust:toolchain.bzl", "rust_toolchain")
load("@rules_rust_bindgen//:defs.bzl", "rust_bindgen_toolchain")
load(":cc_toolchain_config.bzl", "cc_toolchain_config")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "wrapper_scripts",
    srcs = glob(["bin/*.sh"]),
)

filegroup(
    name = "llvm_all",
    srcs = [
        "@llvm_toolchain_llvm//:bin",
        "@llvm_toolchain_llvm//:include",
        "@llvm_toolchain_llvm//:lib",
    ],
)

filegroup(
    name = "all_files",
    srcs = [":llvm_all", ":wrapper_scripts"],
)

cc_toolchain_config(
    name = "x86_64_kernel_config",
    cpu = "x86_64",
    cxx_builtin_include_directories = "@llvm_toolchain_llvm//:cxx_builtin_include",
)

cc_toolchain_config(
    name = "aarch64_kernel_config",
    cpu = "aarch64",
    cxx_builtin_include_directories = "@llvm_toolchain_llvm//:cxx_builtin_include",
)

cc_toolchain_config(
    name = "x86_64_user_config",
    cpu = "x86_64",
    cxx_builtin_include_directories = "@llvm_toolchain_llvm//:cxx_builtin_include",
)

cc_toolchain_config(
    name = "aarch64_user_config",
    cpu = "aarch64",
    cxx_builtin_include_directories = "@llvm_toolchain_llvm//:cxx_builtin_include",
)

cc_toolchain(
    name = "cc_toolchain_x86_64_kernel",
    all_files = ":all_files",
    ar_files = ":all_files",
    as_files = ":all_files",
    compiler_files = ":all_files",
    dwp_files = ":all_files",
    linker_files = ":all_files",
    objcopy_files = ":all_files",
    strip_files = ":all_files",
    supports_param_files = 0,
    toolchain_config = ":x86_64_kernel_config",
    toolchain_identifier = "kernel-x86_64",
)

cc_toolchain(
    name = "cc_toolchain_aarch64_kernel",
    all_files = ":all_files",
    ar_files = ":all_files",
    as_files = ":all_files",
    compiler_files = ":all_files",
    dwp_files = ":all_files",
    linker_files = ":all_files",
    objcopy_files = ":all_files",
    strip_files = ":all_files",
    supports_param_files = 0,
    toolchain_config = ":aarch64_kernel_config",
    toolchain_identifier = "kernel-aarch64",
)

cc_toolchain(
    name = "cc_toolchain_x86_64_user",
    all_files = ":all_files",
    ar_files = ":all_files",
    as_files = ":all_files",
    compiler_files = ":all_files",
    dwp_files = ":all_files",
    linker_files = ":all_files",
    objcopy_files = ":all_files",
    strip_files = ":all_files",
    supports_param_files = 0,
    toolchain_config = ":x86_64_user_config",
    toolchain_identifier = "user-x86_64",
)

cc_toolchain(
    name = "cc_toolchain_aarch64_user",
    all_files = ":all_files",
    ar_files = ":all_files",
    as_files = ":all_files",
    compiler_files = ":all_files",
    dwp_files = ":all_files",
    linker_files = ":all_files",
    objcopy_files = ":all_files",
    strip_files = ":all_files",
    supports_param_files = 0,
    toolchain_config = ":aarch64_user_config",
    toolchain_identifier = "user-aarch64",
)

toolchain(
    name = "x86_64_kernel_toolchain",
    exec_compatible_with = [],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "//platforms:kernel_mode",
    ],
    toolchain = ":cc_toolchain_x86_64_kernel",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

toolchain(
    name = "aarch64_kernel_toolchain",
    exec_compatible_with = [],
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "//platforms:kernel_mode",
    ],
    toolchain = ":cc_toolchain_aarch64_kernel",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

toolchain(
    name = "x86_64_user_toolchain",
    exec_compatible_with = [],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "//platforms:user_mode",
    ],
    toolchain = ":cc_toolchain_x86_64_user",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

toolchain(
    name = "aarch64_user_toolchain",
    exec_compatible_with = [],
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "//platforms:user_mode",
    ],
    toolchain = ":cc_toolchain_aarch64_user",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

rust_toolchain(
    name = "rust_toolchain_x86_64_macos_impl",
    binary_ext = "",
    dylib_ext = ".so",
    exec_triple = "aarch64-apple-darwin",
    rust_doc = "@rust_macos_aarch64__x86_64-unknown-none__stable_tools//:rustdoc",
    # The target name usually includes the triple suffix
    rust_std = "@rust_macos_aarch64__x86_64-unknown-none__stable_tools//:rust_std-x86_64-unknown-none",
    rustc = "@rust_macos_aarch64__x86_64-unknown-none__stable_tools//:rustc",
    staticlib_ext = ".a",
    stdlib_linkflags = [],
    target_triple = "x86_64-unknown-none",
)

rust_toolchain(
    name = "rust_toolchain_x86_64_linux_x86_64_impl",
    binary_ext = "",
    dylib_ext = ".so",
    exec_triple = "x86_64-unknown-linux-gnu",
    rust_doc = "@rust_linux_x86_64__x86_64-unknown-none__stable_tools//:rustdoc",
    # The target name usually includes the triple suffix
    rust_std = "@rust_linux_x86_64__x86_64-unknown-none__stable_tools//:rust_std-x86_64-unknown-none",
    rustc = "@rust_linux_x86_64__x86_64-unknown-none__stable_tools//:rustc",
    staticlib_ext = ".a",
    stdlib_linkflags = [],
    target_triple = "x86_64-unknown-none",
)

rust_toolchain(
    name = "rust_toolchain_aarch64_macos_impl",
    binary_ext = "",
    dylib_ext = ".so",
    exec_triple = "aarch64-apple-darwin",
    rust_doc = "@rust_macos_aarch64__aarch64-unknown-none__stable_tools//:rustdoc",
    rust_std = "@rust_macos_aarch64__aarch64-unknown-none__stable_tools//:rust_std-aarch64-unknown-none",
    rustc = "@rust_macos_aarch64__aarch64-unknown-none__stable_tools//:rustc",
    staticlib_ext = ".a",
    stdlib_linkflags = [],
    target_triple = "aarch64-unknown-none",
)

rust_toolchain(
    name = "rust_toolchain_aarch64_linux_x86_64_impl",
    binary_ext = "",
    dylib_ext = ".so",
    exec_triple = "x86_64-unknown-linux-gnu",
    rust_doc = "@rust_linux_x86_64__aarch64-unknown-none__stable_tools//:rustdoc",
    rust_std = "@rust_linux_x86_64__aarch64-unknown-none__stable_tools//:rust_std-aarch64-unknown-none",
    rustc = "@rust_linux_x86_64__aarch64-unknown-none__stable_tools//:rustc",
    staticlib_ext = ".a",
    stdlib_linkflags = [],
    target_triple = "aarch64-unknown-none",
)

toolchain(
    name = "x86_64_kernel_toolchain_rust_macos",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "//platforms:kernel_mode",
        "@platforms//os:none",
    ],
    toolchain = ":rust_toolchain_x86_64_macos_impl",
    toolchain_type = "@rules_rust//rust:toolchain_type",
)

toolchain(
    name = "x86_64_kernel_toolchain_rust_linux_x86_64",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "//platforms:kernel_mode",
        "@platforms//os:none",
    ],
    toolchain = ":rust_toolchain_x86_64_linux_x86_64_impl",
    toolchain_type = "@rules_rust//rust:toolchain_type",
)

toolchain(
    name = "aarch64_kernel_toolchain_rust_macos",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "//platforms:kernel_mode",
        "@platforms//os:uefi",
    ],
    toolchain = ":rust_toolchain_aarch64_macos_impl",
    toolchain_type = "@rules_rust//rust:toolchain_type",
)

toolchain(
    name = "aarch64_kernel_toolchain_rust_linux_x86_64",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "//platforms:kernel_mode",
        "@platforms//os:uefi",
    ],
    toolchain = ":rust_toolchain_aarch64_linux_x86_64_impl",
    toolchain_type = "@rules_rust//rust:toolchain_type",
)

native_binary(
    name = "clang",
    src = "@llvm_toolchain_llvm//:bin/clang",
)

cc_import(
    name = "libclang_import",
    shared_library = "@llvm_toolchain_llvm//:libclang",
)

rust_bindgen_toolchain(
    name = "bindgen_toolchain_impl",
    bindgen = "@crates//:bindgen-cli__bindgen",
    clang = ":clang",
    libclang = ":libclang_import",
)

toolchain(
    name = "bindgen_toolchain",
    toolchain = ":bindgen_toolchain_impl",
    toolchain_type = "@rules_rust_bindgen//:toolchain_type",
)
