load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_static_library")
load("@rules_rust_bindgen//:defs.bzl", "rust_bindgen_library")

cc_library(
    name = "platform",
    srcs = ["platform_wrapper.h"],
    hdrs = ["platform_wrapper.h"],
    deps = ["//kernel/platform:kernel_platform"],
)

cc_library(
    name = "syscalls",
    srcs = ["syscalls_wrapper.h"],
    hdrs = ["syscalls_wrapper.h"],
    deps = ["//kernel/api/syscalls:syscalls"],
)

rust_bindgen_library(
    name = "syscalls_rust",
    bindgen_flags = [
        "--rust-edition",
        "2024",
        "--rust-target",
        "1.94.0",
        "--use-core",
        "--raw-line",
        "#![no_std]",
        "--raw-line",
        "#![allow(non_upper_case_globals)]",
        "--raw-line",
        "#![allow(non_camel_case_types)]",
        "--raw-line",
        "#![allow(non_snake_case)]",
        "--rustified-enum",
        "syscall_err",
        "--constified-enum-module",
        "syscall_num",
    ],
    cc_lib = ":syscalls",
    clang_flags = [
        "-nostdinc",
        "-ffreestanding",
        "-Iexternal/+git_repository+freestnd-c-hdrs/include",
    ],
    edition = "2024",
    header = "syscalls_wrapper.h",
    target_compatible_with = ["@//platforms:kernel_mode"] + select({
        "@platforms//cpu:aarch64": [
            "@platforms//cpu:aarch64",
            "@platforms//os:uefi",
        ],
        "@platforms//cpu:x86_64": [
            "@platforms//cpu:x86_64",
            "@platforms//os:none",
        ],
    }),
    visibility = ["//visibility:public"],
)

rust_bindgen_library(
    name = "kernel_bindings_gen",
    bindgen_flags = [
        "--rust-edition",
        "2024",
        "--rust-target",
        "1.94.0",
        "--use-core",
        "--raw-line",
        "#![no_std]",
        "--raw-line",
        "#![allow(non_upper_case_globals)]",
        "--raw-line",
        "#![allow(non_camel_case_types)]",
        "--raw-line",
        "#![allow(non_snake_case)]",
    ],
    cc_lib = ":platform",
    clang_flags = [
        "-nostdinc",
        "-ffreestanding",
        "-Iexternal/+git_repository+freestnd-c-hdrs/include",
        "-Iexternal/+git_repository+limine-protocol/include",
    ],
    edition = "2024",
    header = "platform_wrapper.h",
)

rust_static_library(
    name = "kernel_core",
    srcs = glob([
        "src/**/*.rs",
    ]),
    edition = "2024",
    target_compatible_with = ["@//platforms:kernel_mode"] + select({
        "@platforms//cpu:aarch64": [
            "@platforms//cpu:aarch64",
            "@platforms//os:uefi",
        ],
        "@platforms//cpu:x86_64": [
            "@platforms//cpu:x86_64",
            "@platforms//os:none",
        ],
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":kernel_bindings_gen",
        ":syscalls_rust",
        "//kernel/api/init:init_contract_rust",
        "@crates//:bitflags",
        "@crates//:eclipse_framebuffer",
        "@crates//:thiserror-no-std",
    ],
)
