[package]
name = "kernel_core"
edition = "2024"

[dependencies]
init_contract_rust = { path = "../api/init" }
syscalls_rust = { path = "../api/syscalls" }
kernel_bindings_gen = { path = "../platform" }

bitflags = "2.11.0"
eclipse_framebuffer = "0.1.0"
thiserror-no-std = { version = "2.0", features = [] }
