package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:cc_library.bzl", "cc_library")

[
    genrule(
        name = "asm_" + f.split("/")[-1].replace(".asm", ""),
        srcs = [f],
        outs = [f.split("/")[-1] + ".o"],
        cmd = "/opt/homebrew/bin/nasm -f elf64 $< -o $@",
    )
    for f in glob(["src/arch/x86_64/*.asm"])
]

cc_library(
    name = "kernel_platform",
    hdrs = glob(["include/*.h"]),
    deps = [
        "@limine-protocol//:limine-protocol",
        "@freestnd-c-hdrs//:freestnd-c-hdrs",
    ],
    includes = [
        "include",
    ],
    srcs = glob(["src/*.c", "src/common/**/*.c"]) + select({
        "@platforms//cpu:x86_64": glob([
            "src/arch/x86_64/*.c",
            "src/arch/x86_64/*.h",
        ]) + [
            ":asm_syscall_entry",
            ":asm_interrupt_entry",
        ],
        "@platforms//cpu:aarch64": glob([
            "src/arch/aarch64/*.c",
            "src/arch/aarch64/*.h",
            "src/arch/aarch64/*.S",
        ]),
    }),
    features = ["kernel_compile_flags"],
    linkstatic = True,
)
