load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "kernel_platform",
    srcs = glob([
        "src/*.c",
    ]) + select({
        "@platforms//cpu:x86_64": glob([
            "src/arch/x86_64/*.c",
            "src/arch/x86_64/*.h",
            "src/arch/x86_64/*.S",
        ]),
        "@platforms//cpu:aarch64": glob([
            "src/arch/aarch64/*.c",
            "src/arch/aarch64/*.h",
            "src/arch/aarch64/*.S",
        ]),
    }),
    hdrs = glob(["include/*.h"]),
    features = ["kernel_compile_flags"],
    includes = [
        "include",
    ],
    linkstatic = True,
    target_compatible_with = ["@//platforms:kernel_mode"] + select({
        "@platforms//cpu:aarch64": [
            "@platforms//cpu:aarch64",
            "@platforms//os:uefi",
        ],
        "@platforms//cpu:x86_64": [
            "@platforms//cpu:x86_64",
            "@platforms//os:none",
        ],
    }),
    deps = [
        "@freestnd-c-hdrs//:freestnd-c-hdrs",
        "@limine-protocol//:limine-protocol",
    ],
)
