load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "syscalls",
    srcs = ["syscalls_dummy.c"] + glob(["*.h"]),
    hdrs = [
        "syscall_err_list.h",
        "syscall_errs.h",
        "syscall_list.h",
        "syscall_nums.h",
    ],
    target_compatible_with = select({
        "@platforms//cpu:aarch64": [
            "@platforms//cpu:aarch64",
            "@platforms//os:uefi",
        ],
        "@platforms//cpu:x86_64": [
            "@platforms//cpu:x86_64",
            "@platforms//os:none",
        ],
    }) + select({
        "//platforms:kernel_mode": ["//platforms:kernel_mode"],
        "//platforms:user_mode": ["//platforms:user_mode"],
    }),
    deps = ["@freestnd-c-hdrs//:freestnd-c-hdrs"],
    visibility = ["//visibility:public"],
)
